WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29658
XMLHttpRequest.abort() should destroy the response text.
https://bugs.webkit.org/show_bug.cgi?id=29658
Summary
XMLHttpRequest.abort() should destroy the response text.
Sam Weinig
Reported
2009-09-22 15:42:17 PDT
Calling XMLHttpRequest.abort() should destroy the responseText.
Attachments
patch
(4.17 KB, patch)
2009-09-22 16:09 PDT
,
Sam Weinig
ap
: review-
Details
Formatted Diff
Diff
patch [take 2]
(3.61 KB, patch)
2009-09-22 16:42 PDT
,
Sam Weinig
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2009-09-22 16:09:22 PDT
Created
attachment 39958
[details]
patch
Alexey Proskuryakov
Comment 2
2009-09-22 16:19:55 PDT
Comment on
attachment 39958
[details]
patch As discussed on IRC, this re-breaks <
rdar://problem/5766352
> (status shouldn't be reset). Maybe it's OK, maybe not. ChangeLog should explain why. Marking r-, so that this doesn't get landed without a deeper investigation.
Sam Weinig
Comment 3
2009-09-22 16:42:50 PDT
Created
attachment 39961
[details]
patch [take 2]
Alexey Proskuryakov
Comment 4
2009-09-22 16:47:18 PDT
Comment on
attachment 39961
[details]
patch [take 2] + status text are kept around.. Two periods here. r=me
Sam Weinig
Comment 5
2009-09-22 16:49:45 PDT
Fix landed in
r48658
.
Sam Weinig
Comment 6
2009-09-22 16:50:49 PDT
This was tracked by <
rdar://problem/5301430
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug