WebCore: Fix for XMLHttpRequest.abort() should destroy the response text. https://bugs.webkit.org/show_bug.cgi?id=29658 <rdar://problem/5301430>

Reviewed by Alexey Proskuryakov.

Clearing the response text after calling XMLHttpRequest.abort() is necessary
per spec and matches Firefox. It is also a potential memory win.

Test: http/tests/xmlhttprequest/abort-should-destroy-responseText.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::abort): Clear the response text making sure to
keep the actual ResourceReponse around so that the response status and response
status text are kept around.

LayoutTests: Test for XMLHttpRequest.abort() should destroy the response text.
https://bugs.webkit.org/show_bug.cgi?id=29658
<rdar://problem/5301430>

Reviewed by Alexey Proskuryakov.

* http/tests/xmlhttprequest/abort-should-destroy-responseText-expected.txt: Added.
* http/tests/xmlhttprequest/abort-should-destroy-responseText.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@48658 bbb929c8-8fbe-4397-9dbb-9b2b20218538